# rathore-finalproj-baddocs

./: README.md  add_embeddings.py  alerts.csv  app.py  bad_docs.db-journal  clean_alerts.py  clean_nametype.csv  data_cleaning.R  data_cleaning.py  database_creation.sh  database_edits.sh  datawrapper.py  docs-clean.db  freeze.py  full_pipeline.sh  generate_json_from_combined.py  get_pdfs.sh  graph_making.py  images.sh  license_mutations.R  license_mutations.py  mod_alerts.py  modified_alerts.csv  ocr.sh  populate_db.py  populate_json.py  prompt.txt  pyproject.toml  repop_db.py  scrape.py
.devcontainer/: Dockerfile  devcontainer.json
combined_text/: A000067612.314.txt  A000164909.105.txt  AKing06.244.txt  BNnolim05.215.txt  C000212304.295.txt  C000212305.225.txt  C000582006.035.txt  C000582006.185.txt  C000582008.065.txt  D001290105.145.txt  D001799202.135.txt  D001933209.105.txt  D002428907.234.txt  D002592202.265.txt  D002592203.135.txt  D002790304.244.txt  D003203606.255.txt  D003870007.255.txt  D004091604.244.txt  D004441306.264.txt  D004533104.034.txt  D004533104.235.txt  D005364504.304.txt  D005364505.094.txt  D005364506.204.txt  D005744809.164.txt  D005870102.265.txt  D005870104.114.txt  D005870104.254.txt  D005870107.314.txt  D005928107.314.txt  D005928108.154.txt  D006470609.105.txt  D006630203.265.txt  D006630204.105.txt  D006630208.275.txt  D006997709.304.txt  D006997710.114.txt  D007610407.145.txt  D007862803.105.txt  (+24 more)
json/: A000067612.314.json  A000164909.105.json  A0067605.243.json  A0067612.072.json  A0067612.212.json  AKing06.244.json  BNnolim05.215.json  (+530 more)
(+446 files in other folders)
